# M2.010-PAC2

./: .autotools  .cproject  .gitignore  .project  2010-propiedades.txt  M2.010-PAC2 Build (GNU).launch  README.md  autogen.sh  configure.ac
ca/LC_MESSAGES/: g_compropietarios2.mo
po/: POTFILES.in
src/: Makefile.am  ca.mo  ca.po  compraventa.cpp  compraventa.h  compropietaris.cpp  compropietaris.h  comunitat.cpp  comunitat.h  constants.h  data.cpp  data.h  donacio.cpp  donacio.h  ed.h  finca.cpp  finca.h  fitxer.cpp  fitxer.h  fitxer_excepcio.h  fitxer_propietats.cpp  fitxer_propietats.h  fitxer_transmissions.cpp  fitxer_transmissions.h  fraccio.cpp  fraccio.h  g_compropietarios2.cpp  g_compropietarios2.pot  herencia.cpp  herencia.h  itellis.h  itellis_transmissions.cpp  itellis_transmissions.h  iterador.h  llista.h  llista_transmissions.cpp  llista_transmissions.h  participacio.cpp  participacio.h  percentatge.cpp  (+12 more)
test01/: 2010-transmisiones.txt  2011-informe.txt  2011-participaciones.txt  2011-propiedades.txt
