AM_CPPFLAGS = -DLOCALEDIR='"$(localedir)"' ${g_compropietarios2_CPPFLAGS}

bin_PROGRAMS=g_compropietarios2
g_compropietarios2_SOURCES = \
	compraventa.cpp \
	compropietaris.cpp \
	comunitat.cpp \
	data.cpp \
	donacio.cpp \
	finca.cpp \
	fitxer.cpp \
	fitxer_propietats.cpp \
	fitxer_transmissions.cpp \
	fraccio.cpp \
	g_compropietarios2.cpp \
	herencia.cpp \
	itellis_transmissions.cpp \
	llista_transmissions.cpp \
	participacio.cpp \
	percentatge.cpp \
	propietari.cpp \
	propietat.cpp \
	transmissio.cpp \
	transmissio_node.cpp
g_compropietarios2_CXXFLAGS = $(AM_CXXFLAGS) -std=c++14 -Wall -Wextra
